app/sass/panels/_overview.scss
#overview {
  height: 0;
  max-height: 225px;
  margin-bottom: 0;
  opacity: 0;
  transition: opacity .4s .35s, height .4s .75s, margin .4s .75s;

  .title {
    background: linear-gradient(to top, rgba(21, 21, 21, 0.03) 0%, rgba(60, 60, 60, 0.5));//transparent
  }

  > .inner {
    max-height: 191px;
    overflow-y: scroll;
  }//background: rgba(255,255,255, .025);

  &.active {
    height: 95px;
    margin-bottom: 20px;
    opacity: 1;
    transition: opacity .4s .75s, height .4s .35s, margin .4s .35s;

    > .inner { height: auto; }
  }

  &.loaded { transition: height .25s; }

  input, select {
    margin: 4px 0 0;
    height: 24px;
    background: #666;

    &::placeholder { color: #222; }
    &:hover { color: #222; background: #777; }
    &.active { background: #686868; }
  }

  input {
    width: 85px;
    margin-right: 5px;
    margin-left: 8px;
  }

  select { width: 80px; }

  .heading {
    display: block;
    height: 28px;
    color: #616161;
    line-height: 28px;
    background: linear-gradient(to top, rgba(21,21,21, .68) 0%, rgba(35,35,35, .1) 100%);
    cursor: default;
  }

  .unsigned .heading { color: #944444; }//#449454, #446394

  .list {
    width: 298px;
    margin-left: 1px;
    overflow: hidden;
  }

  .item {
    display: flex;
    align-items: center;
    background: #222 linear-gradient(to right, rgba(0, 0, 0, 0.2) 0%, rgba(255, 255, 255, 0.04) 75%, transparent);
    border-bottom: 1px solid rgba(0,0,0, .2);// box-shadow: 0 -1px 0 rgba(0,0,0, .2) inset;
    -webkit-transform: translateZ(0);

    .name { max-width: 180px; }

    .status {
      float: left;
      width: 35px;
      margin-left: 10px;
      margin-right: 0;
      color: #525252;
    }
  }

  .signed .name { width: 165px; }

  .button {
    height: 27px;
    width: 40px;
    margin-left: auto;
    margin-right: 5px;
    color: #616161;
    font-size: 10px;
    line-height: 27px;

    &:hover {
      color: #CCC;
      text-shadow: 0 0 2px rgba(255,255,255, .2);
      background: transparent;
    }
  }

  .sign-player-area {
    position: absolute;
    top: 100%;
    left: 0;
    height: 0;
    width: 100%;
    background: #000;
    opacity: 0;
    overflow: hidden;
    transition: .3s;

    &.active {
      opacity: 1;
      height: 30px;
    }
  }

  .trade {
    height: auto;

    ul {
      width: 36%;
      margin-left: 5%;
      padding-bottom: 8px;
      align-self: flex-start;

      &.league { margin-left: 3%; }
    }

    li {
      height: 20px;
      line-height: 20px;
      text-align: center;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;

      &.team {
        color: #575757;
        font-size: 9px;
        line-height: 20px;
      }

      .year { color: #555; }
    }
  }

  .confirm-slider {
    position: absolute;
    display: flex;
    top: 0;
    left: 0;
    height: 0;
    width: 300px;
    color: #777;
    opacity: 0;
    align-items: center;
    justify-content: center;
    box-shadow: 0 -1px 0 rgba(0,0,0, .2) inset;
    transform: translateX(-300px);
    transition: all .25s, height 0s .25s, opacity 0s .25s;

    &.active {
      height: 100%;
      width: 300px;
      opacity: 1;
      background: #333 linear-gradient(to right, rgba(0, 0, 0, 0.2) 0%, rgba(255, 255, 255, 0.04) 75%, transparent);
      transform: translateX(0);
      transition: transform .25s, height 0s, opacity 0s;
    }

    &.unsigned {
      display: block !important;

      * {
        opacity: 0;
        transition: opacity 0s;
      }
    }

    &.active.unsigned * {
      opacity: 1;
      transition: opacity .25s .25s;
    }

    a {
      color: #999;
      font-size: 13px;

      &:hover { color: #BBB; }

      &.button {
        float: right;
        margin: 5px 9px 0 5px;
        height: 22px;
        width: 50px;
        color: #717171;
        font-size: 10px;
        line-height: 22px;
        border-radius: $border-radius;

        &.sign { margin-right: 0; background: #444; cursor: default; }
        &.sign:hover { text-shadow: none; }
        &.sign.enabled:hover { color: #C5C5C5; background: #457B45; cursor: pointer; }
        &.sign.enabled, &.cancel { background: #232323; }
        &.cancel:hover { color: #AAA; }//background: #8E4343;
      }
    }
  }

  .confirm-text { padding-right: 10px; }
  .confirm-divider { padding: 0 4px; }
  .waiting { color: rgba(255,255,255, .35); }
}

